# MDI_Driver_Cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: CMakeLists.txt
{{cookiecutter.repo_name}}/templates/: mdimechanic_cpp.yml  mdimechanic_python.yml
{{cookiecutter.repo_name}}/templates/cpp/: CMakeLists.txt  {{cookiecutter.repo_name}}.cpp
{{cookiecutter.repo_name}}/templates/python/: util.py  {{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: {{cookiecutter.repo_name}}.cpp
